Fix repeatable item spacing

--- a/media/com_jce/admin/css/src/repeatable.less
+++ b/media/com_jce/admin/css/src/repeatable.less
@@ -26,6 +26,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  gap: 0.5em;
 
   .form-field-repeatable-item {
     display: flex;
